# flamecast-solver

./: .gitignore  Cargo.toml  LICENSE  README.md
main/: Cargo.toml
main/src/: main.rs  test_graphs.rs
main/src/cli/: main_command.rs  mod.rs  num_cpus.rs
main/src/solver_test/: instance_generation.rs  mod.rs  optimization_options.rs  solver_test.rs
main/src/solver_testing/: instance_generation.rs  mod.rs  test_imported_instances.rs  test_predefined_instances.rs  test_user_defined_instances.rs
main/src/tests/: graph_embedding.rs  mod.rs
solver/: Cargo.toml
solver/src/: lib.rs
solver/src/graph_embedding/: cone_calculation.rs  embed.rs  matrix_calculation.rs  mod.rs  options.rs  vector_calculation.rs
solver/src/graph_generation/: generator.rs  graph_generator.rs  low_connectivity_flamecast_generator.rs  matching_flamecast_generator.rs  mod.rs  random_flamecast_generator.rs  util.rs
solver/src/neighborhood/: change.rs  merge.rs  mod.rs  neighbor.rs  recable.rs  split.rs  swap.rs
solver/src/plotting/: distinct_colors.rs  draw_components.rs  flamecast_test_instance.rs  graph_embedding.rs  mod.rs  util.rs  vertices_embedding.rs
solver/src/simulated_annealing/: change_probability.rs  cooling.rs  instance.rs  logging.rs  mod.rs  neighbor_selection.rs  options.rs
solver/src/tests/: embedding_test_graphs.rs  flamecast_test_instances.rs  graph_embedding.rs  initial_flamecast.rs  mod.rs  test_graphs.rs  util.rs
solver/src/timer/: mod.rs  stopwatch.rs  visualize.rs
solver/src/types/: embedding.rs  flamecast_instance.rs  graph.rs  instance.rs  mod.rs  (+2 more)
(+3284 files in other folders)
