[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solver = { path = "../solver" }
serde = "1.0.217"
serde_json = "1.0.137"
rand = "0.8.4"
plotters = "0.3.3"
num_cpus = "1.16.0"
clap = { version = "4.5.27", features = ["derive"] }
rayon = "1.10.0"
