[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clarabel = "0"
clustering = "0.2.1"
plotters = "0.3.3"
rand = "0.8.4"
serde = "1.0.217"
serde_json = "1.0.137"
